fixed line spacing

--- a/styles/sass/_about-me.scss
+++ b/styles/sass/_about-me.scss
@@ -50,7 +50,8 @@ main{
 
 .aboutMePara p{
     text-align: initial;
-    width: 50%;
+    width: 60%;
+    line-height: 1.75rem;
 }
 
 /* CONTACT LINKS */
